<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="5dp" >

        <TextView
            style="@style/AboutDialogText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message_about_body_general" />

        <TextView
            style="@style/AboutDialogHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message_about_header_features" />

        <TextView
            style="@style/AboutDialogText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message_about_body_features" />

        <TextView
            style="@style/AboutDialogHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message_about_header_privacy" />

        <TextView
            style="@style/AboutDialogText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message_about_body_privacy" />

        <TextView
            style="@style/AboutDialogHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message_about_header_build" />

        <TextView
            style="@style/AboutDialogText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message_about_body_build" />
    </LinearLayout>

</ScrollView>