<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dropdown_panel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/stub_drop_down"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/btn_navigate_to"
        style="@style/DropdownActionButton"
        android:contentDescription="@string/description_btn_navigate"
        android:src="@drawable/btn_navigate_small" />

    <ImageButton
        android:id="@+id/btn_call_phone"
        style="@style/DropdownActionButton"
        android:contentDescription="@string/description_btn_call"
        android:src="@drawable/btn_call_small" />

    <ImageButton
        android:id="@+id/btn_visit_website"
        style="@style/DropdownActionButton"
        android:contentDescription="@string/description_btn_website"
        android:src="@drawable/btn_website_small" />

    <ImageButton
        android:id="@+id/btn_share"
        style="@style/DropdownActionButton"
        android:contentDescription="@string/description_btn_share"
        android:src="@drawable/btn_share_small" />

</LinearLayout>