<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:gravity="center">

    <Button
        android:id="@+id/btn_list_places"
        style="@style/DashboardButton"
        android:text="@string/home_btn_list_places" android:drawableTop="@drawable/home_btn_list"/>

    <Button
        android:id="@+id/btn_map_places"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/home_btn_map"
        android:text="@string/home_btn_map_places" />

    <Button
        android:id="@+id/btn_settings"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/home_btn_settings"
        android:text="@string/home_btn_settings" />

</LinearLayout>